2008-11-16  Danny Smith  <dannysmith@usesr.sourceforge.net>

	* dlltool.c (identify_search_section): Cast argument, not return
	value, of xstrdup to 'char*'.

2008-11-15  Charles Wilson  <cygwin@cwilson.fastmail.fm>

	Added --identify option to dlltool.
	* binutils/dlltool.c: Add new global variables
	identify_imp_name and identify_dll_name.
	(identify_dll_for_implib, identify_search_archive,
	identify_search_member, identify_process_section_p,
	identify_search_section): New functions.
	(usage): Added --identify.
	(long_options): Added --identify.
	(main): Handle --identify option.
	* binutils/doc/binutils.texi: Document --identify.

2008-11-14  Tristan Gingold  <gingold@adacore.com>

	Remove outdated mach-o specific tests.
	* objdump.c (load_debug_section): Remove mach-o specific test.
	(mach_o_uncompressed_dwarf_sections): Removed.
	(mach_o_compressed_dwarf_sections): Removed.
	(generic_uncompressed_dwarf_sections): Removed.
	(generic_compressed_dwarf_sections): Removed.
	(check_mach_o_dwarf): Removed.
	(dump_dwarf): Remove call to check_mach_o_dwarf.

2008-11-14  Tristan Gingold  <gingold@adacore.com>

	* configure.com: Get version from configure.in of bfd.
	* makefile.vms-in (DEBUG_OBJS): Add dwarf.obj.
	(CFLAGS): Update flags.

2008-11-13  Hans-Peter Nilsson  <hp@axis.com>
	    Alan Modra  <amodra@bigpond.net.au>

	* nm.c (filter_symbols): Only call memcpy when from != to.

2008-11-10  Tristan Gingold  <gingold@adacore.com>
	    Alan Modra  <amodra@bigpond.net.au>

	* objdump.c (disassemble_bytes): Don't skip leading zeros when
	end of section calculation overflows.

2008-11-07  Prafulla Thakare  <prafulla.thakare@kpitcummins.com>

	* MAINTAINERS: Take over from Anil Paranjpe as H8300 maintainer.

2008-10-31  Alan Modra  <amodra@bigpond.net.au>

	* po/id.po: New file.
	* configure.in (ALL_LINGUAS): Add id.
	* configure: Regenerate.

2008-10-21  Alan Modra  <amodra@bigpond.net.au>

	* windmc.c (res_alloc): Remove unnecessary cast.